--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -195,22 +195,24 @@ services:
     image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
     container_name: oauth2-proxy
     restart: unless-stopped
-    environment:
-      - OAUTH2_PROXY_HTTP_ADDRESS=0.0.0.0:4180
-      - OAUTH2_PROXY_COOKIE_SECRET=${OAUTH2_PROXY_COOKIE_SECRET}
-      - OAUTH2_PROXY_CLIENT_ID=${OAUTH2_PROXY_CLIENT_ID}
-      - OAUTH2_PROXY_CLIENT_SECRET=${OAUTH2_PROXY_CLIENT_SECRET}
-      - OAUTH2_PROXY_EMAIL_DOMAINS=valdanktrading.org
-      - OAUTH2_PROXY_COOKIE_SECURE=true
-      - OAUTH2_PROXY_REVERSE_PROXY=true
-      - OAUTH2_PROXY_UPSTREAMS=static://202
-      # Use wildcard cookie domain for all subdomains (no hardcoded redirect URL)
-      - OAUTH2_PROXY_COOKIE_DOMAIN=.valdanktrading.org
-      - OAUTH2_PROXY_WHITELIST_DOMAINS=.valdanktrading.org
-      - OAUTH2_PROXY_COOKIE_SAMESITE=lax
-      - OAUTH2_PROXY_SET_XAUTHREQUEST=true
-      # Provider config
-      - OAUTH2_PROXY_PROVIDER=google
+    command:
+      - --http-address=0.0.0.0:4180
+      - --cookie-secret=${OAUTH2_PROXY_COOKIE_SECRET}
+      - --client-id=${OAUTH2_PROXY_CLIENT_ID}
+      - --client-secret=${OAUTH2_PROXY_CLIENT_SECRET}
+      - --email-domain=valdanktrading.org
+      - --cookie-secure=true
+      - --reverse-proxy=true
+      - --upstream=static://202
+      - --cookie-domain=.valdanktrading.org
+      - --whitelist-domain=.valdanktrading.org
+      - --cookie-samesite=lax
+      - --set-xauthrequest=true
+      - --provider=google
+      # Logging options
+      - --standard-logging=true
+      - --auth-logging=true
+      - --request-logging=true
     networks:
       - fleetmanager-network
     depends_on:
