--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,9 @@ services:
     env_file:
       - .env
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
+      DATABASE_URL: postgresql://${POSTGRES_USER:-fleetmanager}:${POSTGRES_PASSWORD:-fleetmanager_dev}@db:5432/${POSTGRES_DB:-fleetmanager}
+      GOOGLE_SERVICE_ACCOUNT_FILE: /app/credentials/service-account.json
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
     volumes:
       # Persist data and tokens
       - email_processor_data:/app/data
@@ -70,12 +72,6 @@ services:
     mem_limit: 512m
     mem_reservation: 256m
     cpus: 1.0
-    healthcheck:
-      test: [ "CMD-SHELL", "test -f /app/credentials/credentials.json || exit 1" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
     networks:
       - fleetmanager-network
 
